// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printToDot: computedAmazonView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  fontname = "Helvetica";
  fontsize = 12;
  packmode = "array";
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "cloud.backend";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">Backend</FONT>>;
    sortv = 0;
  ];
  "nd2" [
    id = "amazon.s3";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">S3</FONT>
      </TD></TR>
      <TR><TD>
        <FONT POINT-SIZE="10.5" COLOR="#dbeafe">S3 is a storage service</FONT>
      </TD></TR>
    </TABLE>>;
    sortv = 1;
  ];
  subgraph "cluster_3" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd1";
  }
  subgraph "cluster_4" {
    id = "amazon";
    labeljust = "l";
    fontsize = 9;
    label = <<B>AMAZON</B>>;
    margin = 20;
    "nd2";
  }
  "nd1" -> "nd2" [
    id = "cloud.backend:amazon.s3";
    label = <<FONT POINT-SIZE="10.5">persists artifacts</FONT>>;
  ];
}"
`;

exports[`printToDot: computedCloud3levels 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  fontname = "Helvetica";
  fontsize = 12;
  packmode = "array";
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">customer</FONT>>;
    sortv = 0;
  ];
  "nd2" [
    id = "support";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Support Engineer</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">Support engineers are responsible for supporting</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">customers</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 1;
  ];
  "nd3" [
    id = "cloud.frontend.adminPanel";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Admin Panel Webapp</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">The admin panel is a webapp that allows support</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">staff to manage customer data.</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 2;
  ];
  "nd4" [
    id = "cloud.frontend.dashboard";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Customer Dashboard Webapp</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">The customer dashboard is a webapp that allows</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">customers to view their data.</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 3;
  ];
  "nd5" [
    id = "cloud.backend.graphql";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Graphql API</FONT>
      </TD></TR>
      <TR><TD>
        <FONT POINT-SIZE="10.5" COLOR="#dbeafe">Component that allows to query data via GraphQL.</FONT>
      </TD></TR>
    </TABLE>>;
    sortv = 4;
  ];
  "nd6" [
    id = "cloud.backend.storage";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Backend Storage</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">The backend storage is a component that stores</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">data.</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 5;
    color = "#2563eb";
    shape = "cylinder";
  ];
  "nd7" [
    id = "amazon";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Amazon</FONT>
      </TD></TR>
      <TR><TD>
        <FONT POINT-SIZE="10.5" COLOR="#dbeafe">Amazon is a cloud provider</FONT>
      </TD></TR>
    </TABLE>>;
    sortv = 6;
  ];
  subgraph "cluster_8" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 30;
    "nd3";
    "nd4";
    subgraph "cluster_9" {
      id = "cloud.backend";
      labeljust = "l";
      fontsize = 9;
      label = <<B>BACKEND</B>>;
      margin = 20;
      "nd5";
      "nd6";
      "nd5" -> "nd6" [
        id = "cloud.backend.graphql:cloud.backend.storage";
      ];
    }
    "nd3" -> "nd5" [
      id = "cloud.frontend.adminPanel:cloud.backend.graphql";
      label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
        <TR><TD HEIGHT="12" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5">fetches data in zero trust network with sso</FONT></TD></TR>
        <TR><TD HEIGHT="12" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5">authentification</FONT></TD></TR>
      </TABLE>>;
    ];
    "nd4" -> "nd5" [
      id = "cloud.frontend.dashboard:cloud.backend.graphql";
      label = <<FONT POINT-SIZE="10.5">fetches data</FONT>>;
    ];
  }
  "nd6" -> "nd7" [
    id = "cloud.backend.storage:amazon";
    label = <<FONT POINT-SIZE="10.5">persists artifacts</FONT>>;
  ];
  "nd1" -> "nd4" [
    id = "customer:cloud.frontend.dashboard";
    label = <<FONT POINT-SIZE="10.5">opens in browser</FONT>>;
  ];
  "nd2" -> "nd3" [
    id = "support:cloud.frontend.adminPanel";
    label = <<FONT POINT-SIZE="10.5">manages</FONT>>;
  ];
}"
`;

exports[`printToDot: computedCloudView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  fontname = "Helvetica";
  fontsize = 12;
  packmode = "array";
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">customer</FONT>>;
    sortv = 0;
  ];
  "nd2" [
    id = "support";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Support Engineer</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">Support engineers are responsible for supporting</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">customers</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 1;
  ];
  "nd3" [
    id = "cloud.frontend";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">Frontend</FONT>>;
    sortv = 2;
  ];
  "nd4" [
    id = "cloud.backend";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">Backend</FONT>>;
    sortv = 3;
  ];
  "nd5" [
    id = "amazon";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Amazon</FONT>
      </TD></TR>
      <TR><TD>
        <FONT POINT-SIZE="10.5" COLOR="#dbeafe">Amazon is a cloud provider</FONT>
      </TD></TR>
    </TABLE>>;
    sortv = 4;
  ];
  subgraph "cluster_6" {
    id = "cloud";
    labeljust = "l";
    fontsize = 9;
    label = <<B>CLOUD</B>>;
    margin = 20;
    "nd3";
    "nd4";
    "nd3" -> "nd4" [
      id = "cloud.frontend:cloud.backend";
      label = <<FONT POINT-SIZE="10.5">fetches data</FONT>>;
    ];
  }
  "nd4" -> "nd5" [
    id = "cloud.backend:amazon";
    label = <<FONT POINT-SIZE="10.5">persists artifacts</FONT>>;
  ];
  "nd1" -> "nd3" [
    id = "customer:cloud.frontend";
    label = <<FONT POINT-SIZE="10.5">opens in browser</FONT>>;
  ];
  "nd2" -> "nd3" [
    id = "support:cloud.frontend";
    label = <<FONT POINT-SIZE="10.5">manages</FONT>>;
  ];
}"
`;

exports[`printToDot: computedIndexView 1`] = `
"digraph {
  compound = true;
  pad = 0.08;
  rankdir = "TB";
  nodesep = 1.0417;
  ranksep = 1.0417;
  layout = "dot";
  fontname = "Helvetica";
  fontsize = 12;
  packmode = "array";
  edge [
    fontname = "Helvetica";
    style = "solid";
    penwidth = 2;
    arrowsize = 0.7;
    color = "#a3a3a3";
    fontcolor = "#d4d4d4";
    nojustify = true;
  ];
  node [
    fontname = "Helvetica";
    labelloc = "c";
    shape = "rect";
    width = 3.3333;
    height = 1.875;
    style = "filled,rounded";
    fillcolor = "#3b82f6";
    margin = "0.3333,0.2083";
  ];
  "nd1" [
    id = "customer";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">customer</FONT>>;
    sortv = 0;
  ];
  "nd2" [
    id = "support";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Support Engineer</FONT>
      </TD></TR>
      <TR><TD>
        <TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0">
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">Support engineers are responsible for supporting</FONT></TD></TR>
           <TR><TD HEIGHT="13.125" VALIGN="BOTTOM"><FONT POINT-SIZE="10.5" COLOR="#dbeafe">customers</FONT></TD></TR>
         </TABLE>
      </TD></TR>
    </TABLE>>;
    sortv = 1;
  ];
  "nd3" [
    id = "cloud";
    label = <<FONT POINT-SIZE="13.5" COLOR="#eff6ff">cloud</FONT>>;
    sortv = 2;
  ];
  "nd4" [
    id = "amazon";
    label = <<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="4">
      <TR><TD>
        <FONT POINT-SIZE="13.5" COLOR="#eff6ff">Amazon</FONT>
      </TD></TR>
      <TR><TD>
        <FONT POINT-SIZE="10.5" COLOR="#dbeafe">Amazon is a cloud provider</FONT>
      </TD></TR>
    </TABLE>>;
    sortv = 3;
  ];
  "nd3" -> "nd4" [
    id = "cloud:amazon";
    label = <<FONT POINT-SIZE="10.5">persists artifacts</FONT>>;
  ];
  "nd1" -> "nd3" [
    id = "customer:cloud";
    label = <<FONT POINT-SIZE="10.5">opens in browser</FONT>>;
  ];
  "nd2" -> "nd3" [
    id = "support:cloud";
    label = <<FONT POINT-SIZE="10.5">manages</FONT>>;
  ];
}"
`;
